fix: adjust badge background for WCAG color contrast

--- a/src/scss/components/_badge.scss
+++ b/src/scss/components/_badge.scss
@@ -1,6 +1,6 @@
 .badge.badge--heading {
   padding: $spacer * 0.85 $spacer * 2.8;
   font-weight: 500;
-  background: rgba($primary, 0.1);
+  background: rgba($primary, 0.05);
   color: $primary;
 }
